# VocalLab

./: .gitignore  CMakeLists.txt  README.md  VocalLabInstaller.iss  build.ps1
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
