cmake_minimum_required(VERSION 3.22)
project(VocalLab VERSION 1.0.0)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(FetchContent)
FetchContent_Declare(
    juce
    GIT_REPOSITORY https://github.com/juce-framework/JUCE.git
    GIT_TAG        8.0.0
)
FetchContent_MakeAvailable(juce)

juce_add_plugin(VocalLab
    COMPANY_NAME            "CiptaSuara and Soba Studio"
    BUNDLE_ID               "com.vocallab.plugin"
    IS_SYNTH                FALSE
    NEEDS_MIDI_INPUT        FALSE
    NEEDS_MIDI_OUTPUT       FALSE
    IS_MIDI_EFFECT          FALSE
    EDITOR_WANTS_KEYBOARD_FOCUS FALSE
    COPY_PLUGIN_AFTER_BUILD TRUE
    PLUGIN_MANUFACTURER_CODE VLab
    PLUGIN_CODE             VL01
    FORMATS                 VST3 AU Standalone
    PRODUCT_NAME            "Vocal Lab"
    VST3_CATEGORIES         "Fx"
    ICON_BIG                "${CMAKE_CURRENT_SOURCE_DIR}/Assets/icon.png"
    ICON_SMALL              "${CMAKE_CURRENT_SOURCE_DIR}/Assets/icon.png"
)

juce_generate_juce_header(VocalLab)

target_sources(VocalLab PRIVATE
    Source/PluginProcessor.cpp
    Source/PluginEditor.cpp
)

target_compile_definitions(VocalLab PUBLIC
    JUCE_WEB_BROWSER=0
    JUCE_USE_CURL=0
    JUCE_VST3_CAN_REPLACE_VST2=0
    JUCE_DISPLAY_SPLASH_SCREEN=0
)

target_link_libraries(VocalLab PRIVATE
    juce::juce_audio_utils
    juce::juce_dsp
    PUBLIC
    juce::juce_recommended_config_flags
    juce::juce_recommended_lto_flags
    juce::juce_recommended_warning_flags
)
